fixed z-index prop

--- a/style/_mainSectionLP.scss
+++ b/style/_mainSectionLP.scss
@@ -8,7 +8,6 @@ main.LP{
             margin: 1% 13%;
             display: flex;
             flex-direction: column;
-            z-index: 3;
             h1 {
                 color: white;
                 font-family: $primaryFontStack;
@@ -33,7 +32,6 @@ main.LP{
             display: flex;
             position: absolute;
             bottom: 8.5em;
-            z-index: 1;
             right: 0;
         }
     }
@@ -44,7 +42,6 @@ main.LP{
         width: 100%;
         top: 56em;
         filter: drop-shadow(0px -2px 2px #767285);
-        z-index: 2;
     }
     svg{
         height: 100%;
