--- a/style/style.css
+++ b/style/style.css
@@ -123,7 +123,6 @@ main.LP .contentWrapper .textContentWrapper {
   margin: 1% 13%;
   display: flex;
   flex-direction: column;
-  z-index: 3;
 }
 main.LP .contentWrapper .textContentWrapper h1 {
   color: white;
@@ -145,7 +144,6 @@ main.LP .contentWrapper img {
   display: flex;
   position: absolute;
   bottom: 8.5em;
-  z-index: 1;
   right: 0;
 }
 main.LP .svgContainer {
@@ -155,7 +153,6 @@ main.LP .svgContainer {
   width: 100%;
   top: 56em;
   filter: drop-shadow(0px -2px 2px #767285);
-  z-index: 2;
 }
 main.LP svg {
   height: 100%;
